<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/choose_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="194dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/column_separator"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <RadioGroup
        android:id="@+id/radioGroupSeparators"
        android:layout_width="325dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.081">

        <RadioButton
            android:id="@+id/radioButtonComma"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:text="@string/comma_separator"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="132dp" />

        <RadioButton
            android:id="@+id/radioButtonPipe"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/pipe_separator"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="132dp" />

        <RadioButton
            android:id="@+id/radioButtonSemicolon"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/semicolon_separator"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="132dp" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="404dp"
        android:layout_height="438dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseFile">

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>